--- a/developers.html
+++ b/developers.html
@@ -36,23 +36,23 @@
 			<h2>Cody Sauer</h2>
 			<img class="bio-image" src="Images/CodySauer.jpg" >
 			<p><strong>Roles:</strong> Designer, Writer, Programmer</p>
-			<p class="para"><strong>Bio:</strong> UCI Senior Majoring in Computer Science. Long-time gamer and part-time Dungeon Master. Enjoys C++, sleeping and swimming.</p>
+			<p class="para"><strong>Bio:</strong> UCI senior majoring in Computer Science. Long-time gamer and part-time Dungeon Master. Enjoys C++, sleeping and swimming.</p>
 			<h2>Daniel Thompson</h2>
 			<img class="bio-image" src="Images/DanielThompson.jpg" >
 			<p><strong>Roles:</strong> Game Developer, Artist</p>
-			<p class="para"><strong>Bio:</strong> UCI Senior Majoring in Computer Science. He started developing games for fun by coding a Tetris clone and a Pong clone in C++ and SDL. After building a game engine using the same languages, he honed his art skills with gimp. He enjoys Linux, overly complicated board games, and weightlifting.</p>
+			<p class="para"><strong>Bio:</strong> UCI senior majoring in Computer Science. He started developing games for fun by coding a Tetris clone and a Pong clone in C++ and SDL. After building a game engine using the same languages, he honed his art skills with gimp. He enjoys Linux, overly complicated board games, and weightlifting.</p>
 			<h2>Daniel Tromberg</h2>
 			<img class="bio-image" src="Images/DanielTromberg.jpg" >
 			<p><strong>Roles:</strong> Artist, Editor</p>
-			<p class="para"><strong>Bio:</strong> UCI Senior majoring in Informatics. He specializes in Human Computer Interaction, and greatly enjoyed the challenge of producing novel and functional art for this game, something he had relatively no experience with.</p>
+			<p class="para"><strong>Bio:</strong> UCI senior majoring in Informatics. He specializes in Human Computer Interaction, and greatly enjoyed the challenge of producing novel and functional art for this game, something he had relatively no experience with.</p>
 			<h2>Kyle San Clemente</h2>
 			<img class="bio-image" src="Images/KyleSanClemente.jpg" >
 			<p><strong>Roles:</strong> Producer, Web Developer</p>
-			<p class="para"><strong>Bio:</strong> UCI Senior Majoring in Software Engineering, and Project Manager for Oomba Inc. Enjoys Linux and Vim, and backpacking.</p>
+			<p class="para"><strong>Bio:</strong> UCI senior majoring in Software Engineering, and Project Manager for Oomba Inc. Enjoys Linux and Vim, and backpacking.</p>
 			<h2>Raj Parpani</h2>
 			<img class="bio-image" src="Images/RajParpani.jpg" >
 			<p><strong>Roles:</strong> Artist</p>
-			<p class="para"><strong>Bio:</strong> UCI Senior pursuing a Bachelor’s degree in Informatics with a specialization in Human Computer Interaction. His passion for gaming gave him a strong desire to learn all the new tools he needed to learn for creating this game with his team. He enjoyed demonstrating creative ideas in terms of art while making assets from a top down perspective. </p>
+			<p class="para"><strong>Bio:</strong> UCI senior majoring in Informatics with a specialization in Human Computer Interaction. His passion for gaming gave him a strong desire to learn all the new tools he needed to learn for creating this game with his team. He enjoyed demonstrating creative ideas in terms of art while making assets from a top down perspective. </p>
     </div>
   </body>
 </html>
