--- a/game.html
+++ b/game.html
@@ -33,49 +33,26 @@
     </ul>
     <div id="content">
 			<h1>Controls</h1>
-			<p>Select Drone - “d”</p>
-			<p>Select Room/Select Option/Move Drone (once selected) - LMB</p>
-			<h1>Basic Mechanics</h1>
-			<h2>Room Control</h2>
-			<p>Clicking on a room that the AI has control of should display all options currently available for that room.</p>
+			<p>Interact With People and Objects - “i”</p>
 			<h2>Life Forms</h2>
 			<p>Life forms are not directly controllable. Instead they are located around the ship, waiting for the AI to interact with them.</p>
 			<h2>Drones</h2>
 			<p>Drones are directly controlled by the AI. They can be instructed to interact with objects and life forms in the environment.</p>
-			<p><strong>Drone Functionality</strong> - Hacking Allows the AI to physically interface with systems that are on a closed network.</p>
-			<h1>General Room Mechanics</h1>
-			<h2>Air Level</h2>
-			<p>The oxygen levels of specific rooms is adjustable. Low oxygen levels are potentially fatal.</p>
-			<h2>Temperature</h2>
-			<p>The temperature of specific rooms is adjustable. Temperatures too hot or too cold are potentially fatal.</p>
-			<h2>Lights</h2>
-			<p>Lights can be turned on and off for any specific room. Rooms without light may make it difficult for life forms to see.</p>
 			<h2>Doors</h2>
 			<p>The AI should be able to open or close any door on the ship.</p>
-			<h1>Room Specific Mechanics</h1>
-			<h2>Shields</h2>
-			<p>Change power level of the shields.</p>
-			<h2>Engines</h2>
-			<p>Change ship speed and activate warp drive.</p>
-			<h2>Oxygen</h2>
-			<p>Change the oxygen levels.</p>
-			<h2>Weapon Control</h2>
-			<p>Fire and aim weapons.</p>
 			<h2>Drone Bay</h2>
 			<p>Starting position and resting place for the drone.</p>
+			<p>You must be in The Drone Bay in order to access a list of your Objectives</p>
 			<h2>Med Bay</h2>
 			<p>Activate/Deactivate the healing pods.</p>
 			<h2>Bridge</h2>
 			<p>Take evasive maneuvers.</p>
-			<h2>Sensors</h2>
-			<p>Get information about enemy ships and handle cyberwarfare.</p>
 			<h2>Generator</h2>
 			<p>Control general power levels on the ship.</p>
 			<h2>AI Core</h2>
 			<p>Where Larry is located.</p>
 			<h2>Crew Room</h2>
 			<p>Where the crew sleeps and keeps journals on personal computers.</p>
-
 
 
     </div>
