--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
 			<p class="para"></p>
 			<h2>Downloads</h2>
 			<ul>
-				<li><a href="DesignDoc.doc"><i class="fa fa-file-text-o" aria-hidden="true"></i> Design Doc</a></li>
-				<li><a href="DesignDoc.doc"><i class="fa fa-rocket" aria-hidden="true"></i> SinguLarry Game</a></li>
+				<li><a href="https://docs.google.com/document/d/12yVDMFqD5OsM4lZpgYdrTAAB9IUpacR2YYA0kOkcuIg/edit?usp=sharing"><i class="fa fa-file-text-o" aria-hidden="true"></i> Design Doc</a></li>
+				<li><a href="SinguLarry.exe"><i class="fa fa-rocket" aria-hidden="true"></i> SinguLarry Game</a></li>
 			</ul>
     </div>
   </body>
